# fpga-2

./: .gitignore  README.md  tz.txt
hw/: SDC1.sdc  adc_fifo_hw.tcl  adc_hw.tcl  dac_ad7303_hw.tcl  dac_hw.tcl  data_controller_hw.tcl  dft_top_hw.tcl  dsp_hw.tcl  fir_in.xml  ghrd.v  my_nco_hw.tcl  output_file.cof  output_file.map  pinger_simulator_hw.tcl  serv_req_info.txt  soc_system.BAK.qsys  soc_system.BAK.v  soc_system.cdf  soc_system.qsf  soc_system.qsys  soc_system.sld  soc_system.sopcinfo  soc_system_hw.tcl  sqrt_hw.tcl  top.qpf  top.qsf  top.v  top_assignment_defaults.qdf  unnamed.qsys  unnamed.sopcinfo
hw/.qsys_edit/: preferences.xml  soc_system.xml  soc_system_schematic.nlv
hw/greybox_tmp/: cbx_args.txt
hw/hps_isw_handoff/: u-boot-env.img  u-boot-env.txt  u-boot-env.txt.bckp  u-boot-env.txt.save
hw/ip/: 28coeffs  28wind_coefs  dac_sim.do  lpfwind_coeffs  simul.do
hw/output_files/: Chain1.cdf  Waveform.vwf  fir_ex.xml  output_file.map  top.asm.rpt  top.cdf  top.done  top.eda.rpt  top.fit.rpt  top.fit.summary  top.flow.rpt  top.jdi  top.map.rpt  top.map.smsg  top.map.summary  top.pin  top.sld  top.sta.summary
hw/soc_system/: soc_system.bsf  soc_system.cmp  soc_system.csv  soc_system.html  soc_system.xml  soc_system_bb.v  soc_system_generation.rpt  soc_system_generation.rpt.1  soc_system_generation_previous.rpt  (+2 more)
hw/test/: sum.v  (+1 more)
sw/server/: CMakeLists.txt  README.md  config.json  main.cpp  nginx.conf  pinger.h  processing.cpp  processing.h
sw/server/lib/: libfastcgipp.so.3  libfftw3.so.3.5.7
sw/server/www/: index.html
sw/server/www/js/: events.js
(+208 files in other folders)
